Implement pipe pinning, as suggested by yaufol@
Pinned pipes are always displayed on top of the list,
and their names are preserved across program starts.

--- a/App.xaml
+++ b/App.xaml
@@ -15,6 +15,8 @@ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE. -->
 <Application x:Class="PipeExplorer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:sc="clr-namespace:System.Collections;assembly=mscorlib"
              xmlns:local="clr-namespace:PipeExplorer"
              xmlns:vm="clr-namespace:PipeExplorer.ViewModels"
              StartupUri="PipeExplorerMainWindow.xaml">
@@ -30,6 +32,7 @@ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE. -->
 
             <vm:AdvancedBooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
             <vm:AdvancedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" InvertedLogic="True" />
+            <vm:ChooseConverter x:Key="ChooseConverter" />
 
             <DrawingImage x:Key="AppIcon">
                 <DrawingImage.Drawing>
@@ -60,6 +63,32 @@ OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE. -->
                     </GeometryDrawing>
                 </DrawingImage.Drawing>
             </DrawingImage>
+
+            <!-- Taken from BoxIcons -->
+            <sc:ArrayList x:Key="PinnedIcons">
+                <DrawingImage>
+                    <DrawingImage.Drawing>
+                        <GeometryDrawing Brush="Black">
+                            <GeometryDrawing.Geometry>
+                                <PathGeometry>
+                                    M15,11.586V6h2V4c0-1.104-0.896-2-2-2H9C7.896,2,7,2.896,7,4v2h2v5.586l-2.707,1.707C6.105,13.48,6,13.734,6,14v2 c0,0.553,0.448,1,1,1h2h2v3l1,2l1-2v-3h4c0.553,0,1-0.447,1-1v-2c0-0.266-0.105-0.52-0.293-0.707L15,11.586z
+                                </PathGeometry>
+                            </GeometryDrawing.Geometry>
+                        </GeometryDrawing>
+                    </DrawingImage.Drawing>
+                </DrawingImage>
+                <DrawingImage>
+                    <DrawingImage.Drawing>
+                        <GeometryDrawing Brush="Black">
+                            <GeometryDrawing.Geometry>
+                                <PathGeometry>
+                                    M12,22l1-2v-3h5c0.553,0,1-0.447,1-1v-1.586c0-0.526-0.214-1.042-0.586-1.414L17,11.586V8c0.553,0,1-0.447,1-1V4 c0-1.103-0.897-2-2-2H8C6.897,2,6,2.897,6,4v3c0,0.553,0.448,1,1,1v3.586L5.586,13C5.213,13.372,5,13.888,5,14.414V16 c0,0.553,0.448,1,1,1h5v3L12,22z M8,4h8v2H8V4z M7,14.414l1.707-1.707C8.895,12.52,9,12.266,9,12V8h6v4 c0,0.266,0.105,0.52,0.293,0.707L17,14.414V15H7V14.414z
+                                </PathGeometry>
+                            </GeometryDrawing.Geometry>
+                        </GeometryDrawing>
+                    </DrawingImage.Drawing>
+                </DrawingImage>
+            </sc:ArrayList>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
